force-app/main/default/objects/Defect_Report__c/Defect_Report__c.object-meta.xml
<CustomObject>
    <label>Defect Report</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Defect Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defect Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>