force-app/main/default/objects/Defect_Report__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Defect Reports</relationshipLabel>
    <relationshipName>Defect_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>