force-app/main/default/objects/Defect_Report__c/fields/Defect_Area__c.field-meta.xml
<CustomField>
    <fullName>Defect_Area__c</fullName>
    <label>Defect Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MotherBoard</fullName>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
            <value>
                <fullName>TouchPad</fullName>
            </value>
            <value>
                <fullName>Processor</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Camera</fullName>
            </value>
            <value>
                <fullName>Sound</fullName>
            </value>
            <value>
                <fullName>Connection</fullName>
            </value>
            <value>
                <fullName>Performence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>