force-app/main/default/objects/Defect_Report__c/fields/Defect_Severity__c.field-meta.xml
<CustomField>
    <fullName>Defect_Severity__c</fullName>
    <label>Defect Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>