force-app/main/default/objects/Defect_Report__c/fields/Laptop__c.field-meta.xml
<CustomField>
    <fullName>Laptop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Laptop</label>
    <referenceTo>Laptop__c</referenceTo>
    <relationshipLabel>Defect Reports</relationshipLabel>
    <relationshipName>Defect_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>