force-app/main/default/objects/Defect_Report__c/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <label>Reported Date</label>
    <type>Date</type>
</CustomField>