force-app/main/default/objects/Defect_Report__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Defect Reports</relationshipLabel>
    <relationshipName>Defect_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>