force-app/main/default/objects/Defect_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reported_Date__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status__c</columns>
    <columns>Technician__c</columns>
    <columns>Laptop__c</columns>
    <columns>Defect_Severity__c</columns>
    <columns>Defect_Description__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>